# MultiFactor_cpp2

./: CMakeLists.txt  projectCompile.py
MyTool/include/: ioStuff.h  jsonStuff.h  strStuff.h
MyTool/src/: ioStuff.cpp  jsonStuff.cpp  strStuff.cpp
include/getData/: 89.h  getStockDayLine.h  getTradebleShare.h
src/getData/: getStockDayLine.cpp  getStockDayLine.py  getTradebleShare.cpp  getTradebleShare.py  main.cpp
