cmake_minimum_required(VERSION 3.14)
project(MultiFactor)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
include_directories(include)
include_directories(D:/ProgramData/Anaconda3/include)
include_directories(E:/CLionProjects/MultiFactor/MyTool/include)
include_directories(E:/CLionProjects/MultiFactor/include/getData)
include_directories(E:/frequentlyUsedCPPLibrary/include)
link_directories(bin)
link_directories(D:/ProgramData/Anaconda3/libs)
add_executable(MultiFactor
E:/CLionProjects/MultiFactor/src/getData/fg.cpp
E:/CLionProjects/MultiFactor/src/getData/aaa.cpp
E:/CLionProjects/MultiFactor/src/getData/dsa.cpp
E:/CLionProjects/MultiFactor/src/getData/main.cpp
E:/CLionProjects/MultiFactor/src/getData/lll.cpp
E:/CLionProjects/MultiFactor/src/getData/bbb.cpp
E:/CLionProjects/MultiFactor/src/getData/ddd.cpp
E:/CLionProjects/MultiFactor/MyTool/src/strStuff.cpp
E:/CLionProjects/MultiFactor/MyTool/src/ioStuff.cpp
E:/CLionProjects/MultiFactor/src/getData/www.cpp
E:/CLionProjects/MultiFactor/MyTool/src/jsonStuff.cpp
E:/CLionProjects/MultiFactor/src/getData/45.cpp
E:/CLionProjects/MultiFactor/src/getData/getStockDayLine.cpp
E:/CLionProjects/MultiFactor/src/getData/88888.cpp
E:/CLionProjects/MultiFactor/src/getData/getTradebleShare.cpp
E:/CLionProjects/MultiFactor/src/getData/adsads.cpp
E:/CLionProjects/MultiFactor/src/getData/888.cpp
E:/CLionProjects/MultiFactor/include/getData/aaa.h
E:/CLionProjects/MultiFactor/include/getData/getStockDayLine.h
E:/CLionProjects/MultiFactor/MyTool/include/jsonStuff.h
E:/CLionProjects/MultiFactor/include/getData/ddd.h
E:/CLionProjects/MultiFactor/include/getData/dsa.h
E:/CLionProjects/MultiFactor/include/getData/www.h
E:/CLionProjects/MultiFactor/include/getData/lll.h
E:/CLionProjects/MultiFactor/include/getData/getTradebleShare.h
E:/CLionProjects/MultiFactor/include/getData/88888.h
E:/CLionProjects/MultiFactor/include/getData/fg.h
E:/CLionProjects/MultiFactor/MyTool/include/strStuff.h
E:/CLionProjects/MultiFactor/include/getData/888.h
E:/CLionProjects/MultiFactor/include/getData/bbb.h
E:/CLionProjects/MultiFactor/MyTool/include/ioStuff.h
E:/CLionProjects/MultiFactor/include/getData/adsads.h
E:/frequentlyUsedCPPLibrary/include/json.hpp
D:/ProgramData/Anaconda3/include/Python.h
)
TARGET_LINK_LIBRARIES(MultiFactor 
python36.lib
)
TARGET_LINK_LIBRARIES(MultiFactor 
)
